retrofit with movies fix complet with popular movies with details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="movieHolder">movieHolder</string>
     <string name="imageItem">imageItem</string>
     <string name="original_title">original_title</string>
+    <string name="imageitem">imageItem</string>
+    <string name="average">Average</string>
+    <string name="release_date">Release date</string>
 </resources>
