--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,11 @@
 <resources>
-    <string name="app_name">Movies to Watch</string>
+    <string name="app_name">Movie Review</string>
     <string name="linearLayoutManager">linearLayoutManager</string>
     <string name="gridLayoutManager">gridLayoutManager</string>
     <string name="staggeredGridLayoutManager">staggeredGridLayoutManager</string>
     <string name="movieHolder">movieHolder</string>
     <string name="imageItem">imageItem</string>
     <string name="original_title">original_title</string>
-    <string name="imageitem">imageItem</string>
     <string name="average">Average</string>
     <string name="release_date">Release date</string>
 </resources>
