camelCase mixed with a snakeCase in layouts changed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="originalTitle">originalTitle</string>
     <string name="average">Average</string>
     <string name="release_date">Release date</string>
+    <string name="movie_detail">Movie Detail</string>
 </resources>
