--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,7 @@
 <resources>
     <string name="app_name">Movie Review</string>
-    <string name="linearLayoutManager">linearLayoutManager</string>
-    <string name="gridLayoutManager">gridLayoutManager</string>
-    <string name="staggeredGridLayoutManager">staggeredGridLayoutManager</string>
-    <string name="movieHolder">movieHolder</string>
-    <string name="imageItem">imageItem</string>
-    <string name="originalTitle">originalTitle</string>
+    <string name="imageItem">Thumbnail image of the movie is shown here</string>
+    <string name="originalTitle">Original Title</string>
     <string name="average">Average</string>
     <string name="release_date">Release date</string>
     <string name="movie_detail">Movie Detail</string>
